module-gui/src/main/webapp/resources/uii/plugin-workflow-entity-editor.css
/* ... */
/* currentColor is defined in a style tag in
 * tags/io/goobi/entity_breadcrumb.xhtml */
.breadcrumb-button-group {
  border: 1px solid currentColor !important;
}

.breadcrumb-button-group .breadcrumb-button {
  border-radius: 0;
  color: currentColor !important;
}

.badge:hover {
 background-image: linear-gradient(rgb(0 0 0/10%) 0 0);
}


/* Entity boxes */
.entity-box {
    --bs-gutter-x: var(--gap);
    --bs-gutter-y: var(--gap);
    margin-block-start: 0;
    margin-block-end: var(--gap);
}

.entity-box h2 {
  display: flex;
  align-items: baseline;
  gap: var(--gap);
  margin: 0;
  hyphens: auto;
  overflow: hidden;
}

.entity-box .box__title {
    gap: var(--gap);
}

.entity-box .box-content {
    padding-bottom: var(--padding) !important;
}


.entity-box .grid-container {
    background: var(--clr-white);
  display: grid;
  grid-template-columns: 50px repeat(2, minmax(0, 1fr)) 75px;
}

.entity-box .flex-container {
  display: flex;
  flex-direction: column;
}

.sources-head.grid-container {
  padding: 0 var(--padding);
}

.sources-head__item {
  background-color: var(--bg-content);
  padding: 5px 0;
  margin-bottom: 4px;
  font-weight: bold;
  color: var(--clr-neutral-900);
}
.sources-head__item:first-child {
  margin-left: calc(var(--padding) * -1);
}
.sources-head__item:nth-child(4) {
  margin-right: calc(var(--padding) * -1);
}


.grid-container .badge-bordered {
  margin: 0;
  padding: 2px 6px;
}


[id$="entity"] {
  grid-column-start: 2;
  grid-column-end: -1;
  margin-bottom: 8px;
}

.sources {
  margin: 0 2px;
  max-width: 90%;
}

.sources-row__item {
  color: var(--fg-400);
  word-break: break-word;
  overflow: hidden;
}

.sources-row__item:not(.sources-row__item--status):not(.sources-row__item--actions) {
    margin-right: 4px;
}

.sources-row__item.sources-row__item--status {
    display: flex;
    align-items: start;
}
.sources-row__item.sources-row__item--status span {
  padding: 0 8px;
  border: 1px solid;
  border-radius: 8px;
}

.sources-row__item.sources-row__item--actions {
    display: flex;
	justify-content: space-around;
    align-items: baseline;
    padding-inline-end: 0.5em;
}

.sources-row__item.sources-row__item--actions .btn {
    width: 20px;
}

.sources-row__item.sources-row__item--actions .btn:last-of-type {
    line-height: 1.5;
    padding: 1px 3px;
}

.sources-row__item.sources-row__item--actions .nobackground {
    background: transparent;
    color: var(--box-color);
}

.sources__btn {
  display: flex;
  margin: 0;
  text-align: start;
}
.sources__pair {
  display: grid;
  /* grid-template-columns: repeat(3, minmax(0, 1fr)) 50px; */
  grid-template-columns: repeat(2, 1fr) 6rem;
  color: #333;
}

.sources__key {
  font-weight: bold;
  margin: 0;
  padding: 0;
}
.sources__val {
  grid-column-start: 2;
}

/* gray box containing sources */
.sources__key {
  border-left: 1px solid var(--clr-neutral-600);
  background-color: var(--bg-content);
  padding-left: 8px
}

.sources__val {
  border-right: 1px solid var(--clr-neutral-600);
    background-color: var(--bg-content);
  padding-left: 8px;
}

.sources__pair:first-child .sources__key {
  padding: 8px;
  padding-bottom: 0;
  border-top: 1px solid var(--clr-neutral-600);
}
.sources__pair:first-child .sources__val {
  border-top: 1px solid var(--clr-neutral-600);
  padding: 8px;
  padding-bottom: 0;
}

.sources__pair:last-child .sources__key {
  border-bottom: 1px solid var(--clr-neutral-600);
  padding-bottom: 8px;
}
.sources__pair:last-child .sources__val {
  border-bottom: 1px solid var(--clr-neutral-600);
  padding-bottom: 8px;
}

/* Actions buttons on the bottom */
.editor-actions {
  margin-top: 1.6rem;
}

.editor-actions form {
    display: flex;
    justify-content: flex-end;
    gap: var(--gap);
}

.editor-actions button {
  min-width: 96px;
  padding: 2px 4px;
  border: 1px solid;
  margin-bottom: .8rem;

}

.editor-actions [id$="deleteEntity"] {
  padding: 2px 4px;
  margin-bottom: 0;
  background: transparent;
  color: #721c24;
  border-color: #e3abb2;
  background-color: #f8d7da;
}

.editor-actions [id$="deleteEntity"]:hover {
    color: #721c24;
    background-color: #e3abb2;
}

.editor-actions [id$="save"] {
  padding: 2px 4px;
  margin-bottom: 0;
  background-color: #d4edda;
  border-color: #abd9b5;
  color: #155724;

  order: 1;
}

.editor-actions [id$="save"]:hover {
  background-color: #abd9b5;
  color: #155724;
}

.dropup {
    position: relative;
}

.dropup .caret {
  transform: rotate(180deg);
}

.dropdown--exportBtn {
  padding: 0;
  margin-bottom: 0;
}

.dropdown--exportBtn [id$="exportBtnDropdownToggle"] {
  display: flex;
  justify-content: center;
  align-items: center;

  background-color: #fff;
  min-width: 96px;
  height: 100%;
  gap: var(--gap);
  border-color: var(--clr-neutral-600);
  color: #444;
}

.dropdown--exportBtn [id$="exportBtnDropdownToggle"]:hover {
  background-color: var(--bg-content);
  color: #333;
}

.dropdown--exportBtn .dropdown-menu {
  left: unset;
  right: 0;

}
.dropdown--exportBtn .dropdown-menu {
    border: 1px solid var(--clr-neutral-600);
}

.dropdown--exportBtn button:not([id$="exportBtnDropdownToggle"]) {
  border: 0;
  width: 100%;
  text-align: left;
  margin: 0;
  padding: .8rem 1.6rem;
  background-color: transparent;
}

.dropdown--exportBtn button:hover {
  background-color: var(--bg-content);
  text-decoration: none;
  color: var(--clr-fg);
}

.scrolling {
    overflow-y: auto;
    max-height: calc(50vh - 150px);
}

/* Modals */

#searchEntityModalContent,
#sourceModalContent,
#imageBoxContent,
#entityModalContent,
#vocabularySearchModalContent {
  background-color: var(--bg-content) !important;
  background: var(--bg-content) !important;
}

.modal-header {
    background: var(--box-color);
    color: var(--clr-white);
}

.modal-content {
    border: 1px solid var(--box-color);
}

.modal__gnd-list {
  display: grid;
  gap: var(--gap);
}
/* ... */

